

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Nov-2010 Jean-Marie Simonet
 # Updating JLanguageTest

-------------------- 1.6.0 Beta15 Release [29-Nov-2010] ------------------

29-Nov-2010 Mark Dexter
# Sample data fixes (Elin Waring)

29-Nov-2010 Christophe Demko
 # [#23525] Access to media manager & ACL
 # [#23559] Installer does not initialize the asset table when component is installed

29-Nov-2010 Jean-Marie Simonet
 # [#23340] sort order Extension Manager: Manage (filter). Thanks Klas and Christophe.
 # [#23555] Duplicate alias error in home page removes home page of the site. Thanks Mark
 # [#23376] Confirm password reset fails with invalid token. Thanks Ian.
 $ Missing lines in en-GB.xml and xx-XX.xml, missing ini files in xx-XX.
 # [#23539] Administrator custom module causes fatal error when used with com_content. Thanks Ian.
 $ Consolidated some string, adding missing string.
 # [#23557] Super admin requesting password reminder gets wrong Notice. Thanks Christophe.
 # [#23527] Add css3 support for rounded corners to the mozilla/webkit corners in Hathor. Thanks Andrea.
 # [#23450] mod_articles_category register to readmore and alternative readmore Patch attached. Thanks Angie
 
28-Nov-2010 Jean-Marie Simonet
 # [#22623] stressed titles / utf8 characters don't make it through the return parameter. Thanks Christophe.

28-Nov-2010 Mark Dexter
# [#23501] Custom groups assignment not being honoured in user edit form.
# [#23419] group with create in a single category only (e.g. customer group) user getting 403 errors

27-Nov-2010 Ian MacLennan
 # [#23513] Incorrect PHP function referenced in date()'s phpdoc for second parameter

27-Nov-2010 Mark Dexter