@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 30-Nov-2010 Jean-Marie Simonet
  # Updating JLanguageTest
+ # Corrected JArrayHelperTest unicode corruption
 
 -------------------- 1.6.0 Beta15 Release [29-Nov-2010] ------------------
 
